<resources>
    <string name="app_name">TestBalina</string>

    <string name="admin">Administrator</string>
    <string name="user">User</string>
    <string name="action_settings">Settings</string>
    <string name="Hello">Hello! Do you want enter as:</string>
    <string name="or">or</string>
    <string name="title_activity_admin">Admin</string>
    <string name="list_empty">There are no items to show</string>
    <string name="add_task">Add Task</string>
    <string name="title_activity_admin_task">AdminTask</string>
    <string name="name">Name</string>
    <string name="brief">Brief</string>
    <string name="deadline">Deadline</string>
    <string name="cost">Cost</string>
    <string name="map_point">On map:</string>
    <string name="name_hint">Enter name</string>
    <string name="brief_hint">Enter brief</string>
    <string name="cost_hint">Enter cost</string>
    <string name="deadline_hint">Choose Date and Time</string>
    <string name="add">Add</string>
    <string name="title_activity_user">User</string>
    <string name="deadline_hint2">Choose Time</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
