<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AdminUser">

    <TextView
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:text="@string/Hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:onClick="onClick"
        android:id="@+id/admin"
        android:text="@string/admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@android:color/black"
        android:text="@string/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:onClick="onClick"
        android:id="@+id/user"
        android:text="@string/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
